fix: overflow-x hidden

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -23,6 +23,7 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 .h1, h1 {
     font-weight: 400;
